--- a/semana15/aula-41-intro-ts/package.json
+++ b/semana15/aula-41-intro-ts/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "exercise1": "node ./src/exercicio1.js",
+    "exercise-1": "tsc && node ./build/exercicio1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
