--- a/semana15/aula-41-intro-ts/package.json
+++ b/semana15/aula-41-intro-ts/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./src/index.js",
     "exercise-1": "tsc && node ./build/exercicio1.js",
+    "exercise-2": "tsc && node ./build/exercicio2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
