--- a/semana15/aula-41-intro-ts/package.json
+++ b/semana15/aula-41-intro-ts/package.json
@@ -7,6 +7,7 @@
     "start": "node ./src/index.js",
     "exercise-1": "tsc && node ./build/exercicio1.js",
     "exercise-2": "tsc && node ./build/exercicio2.js",
+    "exercise-3": "tsc && node ./build/exercicio3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
