--- a/semana16/todo-list/package.json
+++ b/semana16/todo-list/package.json
@@ -4,8 +4,9 @@
   "description": "Lista de tarefas utilizando SQL",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts",
+    "init-tables": "tsc && node ./build/setup/createTables.js",
     "start": "tsc && node ./build/index.js",
+    "dev": "ts-node-dev ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,6 +21,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/knex": "^0.16.1",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
@@ -28,6 +30,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.15",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.2"
   }
 }
