--- a/semana17/autenticacao/package.json
+++ b/semana17/autenticacao/package.json
@@ -7,6 +7,7 @@
     "start": "tsc && node ./build/index.js ",
     "build": " echo \"Transpiling files…\" && tsc && echo \"Done!\"",
     "dev": "ts-node-dev ./src/index.ts",
+    "tables": " echo \"Transpiling files…\" && tsc && echo \"Creating tables…\" && node ./build/setup/tables.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
