--- a/semana18/autenticacao/package.json
+++ b/semana18/autenticacao/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
@@ -25,6 +26,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
