--- a/semana18/web-services/package.json
+++ b/semana18/web-services/package.json
@@ -22,6 +22,7 @@
     "knex": "^0.21.4",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
     "ts-node-dev": "^1.0.0-pre.57",
     "typescript": "^3.9.7",
     "uuid": "^8.3.2"
@@ -33,6 +34,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
     "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0"
   }
 }
