--- a/semana18/cookenu/package.json
+++ b/semana18/cookenu/package.json
@@ -21,6 +21,7 @@
         "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "dayjs": "^1.10.4",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "install": "^0.13.0",
