--- a/semana20/testes-automatizados/package.json
+++ b/semana20/testes-automatizados/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts",
+    "dev": "ts-node-dev ./src/verifyAge.ts",
     "test": "node ./node_modules/jest/bin/jest.js"
   },
   "author": "",
